# cyberpunk_cmake_mod

./: .gitignore  .gitmodules  .redscript-ide  CMakeLists.txt  cyberpunk_cmake_mod.code-workspace  license.md  readme.md
.github/workflows/: cmake.yml
cmake/: FindRED4ext.SDK.cmake
red4ext/: CMakeLists.txt  Main.cpp
redscript/: project_slug_uninstall.bat
